log/build_2021-05-31_15-32-31/gazebo_plugin_sim/stdout_stderr.log
[35m[1mScanning dependencies of target platform_plugin_test[0m
[ 50%] [32mBuilding CXX object CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:45:19: error: ‘PID’ in namespace ‘gazebo::common’ does not name a type
   45 |   gazebo::common::PID pidM1;
      |                   ^~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In member function ‘virtual void gazebo_plugin_sim::PlatformPluginTest::Load(gazebo::physics::ModelPtr, sdf::v9::ElementPtr)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:73:12: error: ‘class gazebo_plugin_sim::PlatformPluginTestPrivate’ has no member named ‘pidM1’
   73 |     impl_->pidM1 = gazebo::common::PID(0.1,0,0);
      |            ^~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:73:36: error: ‘PID’ is not a member of ‘gazebo::common’
   73 |     impl_->pidM1 = gazebo::common::PID(0.1,0,0);
      |                                    ^~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:73:36: note: suggested alternatives:
In file included from /usr/include/gazebo-11/gazebo/msgs/joint_cmd.pb.h:33,
                 from /usr/include/gazebo-11/gazebo/msgs/MessageTypes.hh:51,
                 from /usr/include/gazebo-11/gazebo/physics/Joint.hh:29,
                 from /home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:2:
/usr/include/gazebo-11/gazebo/msgs/pid.pb.h:73:23: note:   ‘gazebo::msgs::PID’
   73 | class GZ_MSGS_VISIBLE PID : public ::google::protobuf::Message /* @@protoc_insertion_point(class_definition:gazebo.msgs.PID) */ {
      |                       ^~~
In file included from /usr/include/ignition/math6/ignition/math.hh:50,
                 from /usr/include/sdformat-9.5/sdf/Param.hh:33,
                 from /usr/include/sdformat-9.5/sdf/Element.hh:28,
                 from /usr/include/sdformat-9.5/sdf/Actor.hh:25,
                 from /usr/include/sdformat-9.5/sdf/sdf.hh:2,
                 from /usr/include/gazebo-11/gazebo/common/Events.hh:21,
                 from /usr/include/gazebo-11/gazebo/physics/Joint.hh:28,
                 from /home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:2:
/usr/include/ignition/math6/ignition/math/PID.hh:38:33: note:   ‘ignition::math::v6::PID’
   38 |     class IGNITION_MATH_VISIBLE PID
      |                                 ^~~
In file included from /usr/include/ignition/msgs5/ignition/msgs/joint_cmd.pb.h:34,
                 from /usr/include/ignition/msgs5/ignition/msgs/MessageTypes.hh:95,
                 from /usr/include/ignition/msgs5/ignition/msgs/Utility.hh:33,
                 from /usr/include/ignition/msgs5/ignition/msgs.hh:27,
                 from /usr/include/ignition/transport8/ignition/transport/Node.hh:33,
                 from /usr/include/gazebo-11/gazebo/physics/Entity.hh:25,
                 from /usr/include/gazebo-11/gazebo/physics/Link.hh:31,
                 from /home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:3:
/usr/include/ignition/msgs5/ignition/msgs/pid.pb.h:78:29: note:   ‘ignition::msgs::PID’
   78 | class IGNITION_MSGS_VISIBLE PID : public ::google::protobuf::Message /* @@protoc_insertion_point(class_definition:ignition.msgs.PID) */ {
      |                             ^~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:76:40: error: invalid use of incomplete type ‘class gazebo::physics::JointController’
   76 |     impl_->model_->GetJointController()->SetVelocityPID(
      |                                        ^~
In file included from /usr/include/gazebo-11/gazebo/physics/State.hh:28,
                 from /usr/include/gazebo-11/gazebo/physics/JointState.hh:24,
                 from /usr/include/gazebo-11/gazebo/physics/Joint.hh:31,
                 from /home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:2:
/usr/include/gazebo-11/gazebo/physics/PhysicsTypes.hh:48:11: note: forward declaration of ‘class gazebo::physics::JointController’
   48 |     class JointController;
      |           ^~~~~~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:77:46: error: ‘class gazebo_plugin_sim::PlatformPluginTestPrivate’ has no member named ‘pidM1’
   77 |      impl_->jointM1->GetScopedName(), impl_->pidM1);
      |                                              ^~~~~
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
